Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40716

QQuickWidget and QOpenGLWidget broken with toplevels that have alpha enabled

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.4.0
    • 5.4.0
    • GUI: OpenGL
    • None
    • 5621a7c5014ac337d41a00ca8f53f172bd17b792

    Description

      QOpenGLWidget and QQuickWidget give weird results on systems where the system gives a context/surface with alpha.

      For example with Mesa/Intel configured for EGL/GLES2, the window always gets a 32-bit visual. This results in something like the attached screenshot. Neither the transparency nor the swapped red and blue are ok.

      The same issue is visible when explicitly requesting alpha for the toplevel via setAttribute(Qt::WA_TranslucentBackground).

      This is probably a side effect of how qplatformbackingstore performs the composition.

      Attachments

        1. qwalpha.png
          qwalpha.png
          555 kB
        2. wrong_composition.png
          wrong_composition.png
          496 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lagocs Laszlo Agocs
            lagocs Laszlo Agocs
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes